Se crean las clases para recuperar cada pregunta